Changes added by PRAMOD

--- a/src/app/pages/dealer/report/daily-report-entries/daily-report-entries.component.html
+++ b/src/app/pages/dealer/report/daily-report-entries/daily-report-entries.component.html
@@ -1,1 +1,4 @@
-<p>daily-report-entries works!</p>
+<div class="card-header">
+    <b>Daily Report Entries</b>
+</div>
+<app-feeds-widget1></app-feeds-widget1> 
