--- a/src/app/pages/dealer/credit/view-payments/view-payments.component.html
+++ b/src/app/pages/dealer/credit/view-payments/view-payments.component.html
@@ -1,1 +1,10 @@
-<p>view-payments works!</p>
+<div class="card-header">
+    <b>View Payments</b>
+</div>
+<!-- begin::Header -->
+<div class="card-header border-0 pt-5">
+    <div>
+        <app-base-tables-widget2 class="card card-xxl-stretch mb-5 mb-xl-8"></app-base-tables-widget2>
+    </div>
+</div>
+<!-- end:: Header -->
