--- a/src/app/pages/dealer/report/sales-purchase-report/sales-purchase-report.component.html
+++ b/src/app/pages/dealer/report/sales-purchase-report/sales-purchase-report.component.html
@@ -1,1 +1,4 @@
-<p>sales-purchase-report works!</p>
+<div class="card-header">
+    <b>Sales Purchase Report</b>
+</div>
+<app-feeds-widget2></app-feeds-widget2> 
