Changes added by PRAMOD

--- a/src/app/pages/dealer/report/summary-report/summary-report.component.html
+++ b/src/app/pages/dealer/report/summary-report/summary-report.component.html
@@ -1,1 +1,4 @@
-<p>summary-report works!</p>
+<div class="card-header">
+    <b>P&L Summary Report</b>
+</div>
+<app-feeds-widget4></app-feeds-widget4> 
