--- a/src/app/pages/dealer/report/viswasa-tx-excel/viswasa-tx-excel.component.html
+++ b/src/app/pages/dealer/report/viswasa-tx-excel/viswasa-tx-excel.component.html
@@ -1,1 +1,4 @@
-<p>viswasa-tx-excel works!</p>
+<div class="card-header">
+    <b>Viswasa Tx Excel</b>
+</div>
+<app-feeds-widget3></app-feeds-widget3> 
