--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget4/feeds-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget4/feeds-widget4.component.html
@@ -1,106 +1,121 @@
-<!--  begin::Body -->
-<div class="card-body pb-0">
-  <!--  begin::Header -->
-  <div class="d-flex align-items-center mb-5">
-    <!--  begin::User -->
-    <div class="d-flex align-items-center flex-grow-1">
-      <!--  begin::Avatar -->
-      <div class="symbol symbol-45px me-5">
-        <img src="./assets/media/avatars/300-7.jpg" alt="" />
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <br><br>
+      <div class="row" style="margin-left: 710px;">
+        <div class="col-auto">
+          <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/report/addSummaryReport"
+            [routerLinkActive]="['router-link-active']">
+            Add Daily Report </button>
+        </div>
+        <div class="col-auto">
+          <button type="button" class="btn btn-success btn-rounded mb-2 me-2" (click)="addOpening(addBal)">
+            Add Openning Balance </button>
+        </div>
       </div>
-      <!--  end::Avatar -->
-
-      <!--  begin::Info -->
-      <div class="d-flex flex-column">
-        <a href="#" class="text-gray-800 text-hover-primary fs-6 fw-bolder">
-          Carles Nilson
-        </a>
-        <span class="text-gray-500 fw-bold">Last week at 10:00 PM</span>
+      <form [formGroup]="filterForm">
+        <div class="row">
+          <div class="col-md-1"></div>
+          <label for="example-text-input" class="col-auto col-form-label">Date Range </label>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;"
+              name="startDate" ngbTooltip="Start Date" (click)="startDate.toggle()" ngbDatepicker
+              #startDate="ngbDatepicker" formControlName="startDate">
+          </div>
+          <div class="col-md-2">
+            <input class="form-control" placeholder="DD-MM-YYYY" readonly style="background-color: #ffffff;"
+              name="endDate" ngbTooltip="End Date" (click)="endDate.toggle()" ngbDatepicker #endDate="ngbDatepicker"
+              formControlName="endDate">
+          </div>
+          <div class="col-lg-1">
+            <button type="button" class="btn btn-primary" name="button" (click)="getDailyReports()">
+              Submit
+            </button>
+          </div>
+        </div>
+      </form>
+      <div class="card-body">
+        <br>
+        <table class="table table-hover">
+          <thead class="table-light">
+            <tr>
+              <th style="text-align: center;"> Sr No </th>
+              <th style="text-align: center;"> Report Date </th>
+              <th style="text-align: center;"> Created Date </th>
+              <th style="text-align: center;"> Report Amount</th>
+              <th style="text-align: center;"> Action </th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let data of reportData; let i = index">
+            <tr>
+              <td style="text-align: center;"> {{ i + 1}} </td>
+              <td style="text-align: center;"> {{ data.profitReportDate | date: "dd MMM, yyyy"}} </td>
+              <td style="text-align: center;"> {{ data.profitReportCreatedAt | date: "dd MMM, yyyy"}} </td>
+              <td *ngIf="data.profitReportAmount < 0" style="text-align: center;">
+                {{ data.profitReportAmount * (-1) | number:'1.2-2'}} CR
+              </td>
+              <td *ngIf="data.profitReportAmount >= 0" style="text-align: center;">
+                {{ data.profitReportAmount | number:'1.2-2'}}
+              </td>
+              <td style="text-align: center;">
+                <button class="btn btn-primary" (click)="viewReport(data.profitReportId)"> View </button>
+                &nbsp;&nbsp;
+                <button class="btn btn-warning" (click)="updateReport(data.profitReportId)"> Update </button>
+                &nbsp;&nbsp;
+                <button class="btn btn-danger" (click)="deleteReport(data.profitReportId)"> Delete </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <!--  end::Info -->
-    </div>
-    <!--  end::User -->
 
-    <!--  begin::Menu -->
-    <div class="my-0">
-      <button
-        type="button"
-        class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary"
-        data-kt-menu-trigger="click"
-        data-kt-menu-placement="bottom-end"
-        data-kt-menu-flip="top-end"
-      >
-        <app-keenicon name="category" class="fs-2"></app-keenicon>
-      </button>
-      <app-dropdown-menu1></app-dropdown-menu1>
+      <ng-template #addBal let-c="close" let-d="dismiss">
+        <div class="modal-header">
+          <h4 class="modal-title">
+            <label>
+              <h4>
+                <strong>
+                  Add Opening Balance <br></strong>
+              </h4>
+            </label>
+          </h4>
+          <button type="button" class="btn btn-danger" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <label for="example-text-input" class="col-md-3 col-form-label">Date </label>
+            <div class="col-md-6">
+              <input class="form-control" placeholder="DD/MM/YYYY" name="date" (click)="startDate.toggle()" readonly
+                style="background-color: #ffffff;" [(ngModel)]="date" [ngModelOptions]="{standalone: true}"
+                ngbDatepicker #startDate="ngbDatepicker">
+            </div>
+          </div>
+          <br><br>
+          <div class="row">
+            <label for="example-text-input" class="col-md-3 col-form-label">Opening Balance </label>
+            <div class="col-md-6">
+              <input class="form-control" type="number" [(ngModel)]="balance" [ngModelOptions]="{standalone: true}"
+                placeholder="Enter Amount">
+            </div>
+          </div>
+          <br><br>
+          <div class="row" style="justify-content: center;">
+            <div class="col-lg-1" *ngIf="!updateOpening">
+              <button type="button" class="btn btn-primary" name="button" (click)="submitOpening()">
+                Submit
+              </button>
+            </div>
+            <div class="col-lg-1" *ngIf="updateOpening">
+              <button type="button" class="btn btn-primary" name="button" (click)="updateOpening()">
+                Update
+              </button>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+
     </div>
-    <!--  end::Menu -->
   </div>
-  <!--  end::Header -->
-
-  <!--  begin::Post -->
-  <div class="mb-7">
-    <!--  begin::Text -->
-    <div class="text-gray-800 mb-5">
-      Outlines keep you honest. They stop you from indulging in poorly
-      thought-out metaphors about driving and keep you focused on the overall
-      structure of your post
-    </div>
-    <!--  end::Text -->
-
-    <!--  begin::Toolbar -->
-    <div class="d-flex align-items-center mb-5">
-      <a
-        href="#"
-        class="
-          btn btn-sm btn-light btn-color-muted btn-active-light-success
-          px-4
-          py-2
-          me-4
-        "
-      >
-        <app-keenicon name="element-plus" class="fs-3"></app-keenicon>
-        22
-      </a>
-
-      <a
-        href="#"
-        class="
-          btn btn-sm btn-light btn-color-muted btn-active-light-danger
-          px-4
-          py-2
-        "
-      >
-        <app-keenicon name="heart" class="fs-2"></app-keenicon>
-        59
-      </a>
-    </div>
-    <!--  end::Toolbar -->
-  </div>
-  <!--  end::Post -->
-
-  <!--  begin::Separator -->
-  <div class="separator mb-4"></div>
-  <!--  end::Separator -->
-
-  <!--  begin::Reply input -->
-  <form class="position-relative mb-6">
-    <textarea
-      class="form-control border-0 p-0 pe-10 resize-none min-h-25px"
-      rows="1"
-      placeholder="Reply.."
-    ></textarea>
-
-    <div class="position-absolute top-0 end-0 me-n5">
-      <span class="btn btn-icon btn-sm btn-active-color-primary pe-0 me-2">
-        <app-keenicon name="paper-clip" class="fs-3 mb-3"></app-keenicon>
-      </span>
-
-      <span class="btn btn-icon btn-sm btn-active-color-primary ps-0">
-        <app-keenicon name="geolocation" class="fs-3 mb-3"></app-keenicon>
-      </span>
-    </div>
-  </form>
-  <!--  edit::Reply input -->
 </div>
-<!--  end::Body -->
