--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget6/feeds-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget6/feeds-widget6.component.html
@@ -1,117 +1,157 @@
-<!--begin::Body-->
-<div class="card-body pb-0">
-  <!--begin::Header-->
-  <div class="d-flex align-items-center mb-5">
-    <!--begin::User-->
-    <div class="d-flex align-items-center flex-grow-1">
-      <!--begin::Avatar-->
-      <div class="symbol symbol-45px me-5">
-        <img src="./assets/media/avatars/300-13.jpg" alt="" />
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <br>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <label class="col-auto"> <b>Date</b></label>
+        <div class="col-md-3">
+          <input class="form-control" placeholder="DD/MM/YYYY" name="date" (click)="startDate.toggle()"
+            style="background-color: #ffffff;" [(ngModel)]="reportDate" (dateSelect)="onDateSelection()"
+            [ngModelOptions]="{standalone: true}" ngbDatepicker #startDate="ngbDatepicker">
+        </div>
+        <div class="col-auto" style="padding-left: 500px">
+          <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/report/summaryReport"
+            [routerLinkActive]="['router-link-active']">
+            View Daily Report </button>
+        </div>
       </div>
-      <!--end::Avatar-->
-
-      <!--begin::Info-->
-      <div class="d-flex flex-column">
-        <a href="#" class="text-gray-800 text-hover-primary fs-6 fw-bolder">
-          Mat Dillon
-        </a>
-        <span class="text-gray-500 fw-bold">Last month</span>
+      <br>
+      <div class="row">
+        <div class="col-md-1"></div>
+        <label class="col-auto"> <b>Opening </b></label>
+        <div class="col-md-3">
+          {{opening | number:"1.2-2"}}
+        </div>
       </div>
-      <!--end::Info-->
-    </div>
-    <!--end::User-->
 
-    <!--begin::Menu-->
-    <div class="my-0">
-      <button
-        type="button"
-        class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary"
-        data-kt-menu-trigger="click"
-        data-kt-menu-placement="bottom-end"
-        data-kt-menu-flip="top-end"
-      >
-        <app-keenicon name="category" class="fs-2"></app-keenicon>
-      </button>
-      <app-dropdown-menu1></app-dropdown-menu1>
+      <div class="card-body">
+        <br>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-md-4 fs-5">Income Details </div>
+              <div class="col-md-4 fs-5">Expense Details </div>
+              <div class="col-md-4 fs-5">Calculation Details </div>
+            </div>
+            <br>
+
+            <div class="row">
+              <div class="col-md-4">
+                <div class="table-responsive">
+                  <table class="table table-hover table-striped table-bordered">
+                    <thead class="table-light">
+                      <tr>
+                        <th style="text-align: center;"> Type </th>
+                        <th style="text-align: center;"> Amount </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let data of incomeData">
+                        <td style="text-align: center;">
+                          {{data.incomeType}}
+                        </td>
+                        <td style="text-align: center;">
+                          <input class="form-control" type="number" [(ngModel)]="data.incomeAmount"
+                            (input)="calculateTotalIncome()" [ngModelOptions]="{standalone: true}"
+                            placeholder="Enter Amount">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="text-align: center;">
+                          Total
+                        </td>
+                        <td style="text-align: center;">
+                          <input class="form-control" type="number" [(ngModel)]="totalIncome"
+                            [ngModelOptions]="{standalone: true}" disabled>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="table-responsive">
+                  <table class="table table-hover table-striped table-bordered">
+                    <thead class="table-light">
+                      <tr>
+                        <th style="text-align: center;"> Type </th>
+                        <th style="text-align: center;"> Amount </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let data of expenseData">
+                        <td style="text-align: center;">
+                          {{data.expenseType}}
+                        </td>
+                        <td style="text-align: center;">
+                          <input class="form-control" type="number" [(ngModel)]="data.expenseAmount"
+                            (input)="calculateTotalExpense()" [ngModelOptions]="{standalone: true}"
+                            placeholder="Enter Amount">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="text-align: center;">
+                          Total
+                        </td>
+                        <td style="text-align: center;">
+                          <input class="form-control" type="number" [(ngModel)]="totalExpense"
+                            [ngModelOptions]="{standalone: true}" disabled>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <div class="table-responsive">
+                  <table class="table table-hover table-striped table-nowrap">
+                    <thead class="table-light">
+                      <tr>
+                        <th style="text-align: center;"> Income </th>
+                        <th style="text-align: center;"> {{totalIncome | number:"1.2-2"}} </th>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td style="text-align: center;">
+                          Expense
+                        </td>
+                        <td style="text-align: center;">
+                          {{totalExpense | number:"1.2-2"}}
+                        </td>
+                      </tr>
+                      <tr>
+                        <td style="text-align: center;">
+                          Total
+                        </td>
+                        <td style="text-align: center;">
+                          <span *ngIf="(opening + totalIncome - totalExpense) < 0">
+                            {{ (opening + totalIncome - totalExpense) * (-1) | number:"1.2-2"}} CR
+                          </span>
+                          <span *ngIf="(opening + totalIncome - totalExpense) >= 0">
+                            {{ (opening + totalIncome - totalExpense) | number:"1.2-2"}}
+                          </span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <br>
+
+            <div class="row" style="padding-left: 250px;">
+              <div class="col-md-2">
+                <button class="btn btn-success" style="width:100px" (click)="updateReport()"> Update </button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
     </div>
-    <!--end::Menu-->
   </div>
-  <!--end::Header-->
-
-  <!--begin::Post-->
-  <div class="mb-6">
-    <!--begin::Text-->
-    <div class="text-gray-800 fs-6 fw-normal mb-5">
-      Outlines keep you honest. They stop you from indulging in poorly
-      thought-out metaphors
-    </div>
-    <!--end::Text-->
-
-    <!--begin::Video-->
-    <div class="mb-5">
-      <iframe
-        title="widget11-video"
-        class="embed-responsive-item rounded h-300px w-100"
-        src="https://www.youtube.com/embed/qIHXpnASPAA"
-        allowFullScreen="true"
-      ></iframe>
-    </div>
-    <!--end::Video-->
-
-    <!--begin::Toolbar-->
-    <div class="d-flex align-items-center mb-5">
-      <a
-        href="#"
-        class="
-          btn btn-sm btn-light btn-color-muted btn-active-light-success
-          px-4
-          py-2
-          me-4
-        "
-      >
-        <app-keenicon name="element-plus" class="fs-3"></app-keenicon>
-        189
-      </a>
-
-      <a
-        href="#"
-        class="
-          btn btn-sm btn-light btn-color-muted btn-active-light-danger
-          px-4
-          py-2
-        "
-      >
-        <app-keenicon name="heart" class="fs-2"></app-keenicon>
-        229
-      </a>
-    </div>
-    <!--end::Toolbar-->
-  </div>
-  <!--end::Bottom-->
-
-  <!--begin::Separator-->
-  <div class="separator mb-4"></div>
-  <!--end::Separator-->
-
-  <!--begin::Reply input-->
-  <form class="position-relative mb-6">
-    <textarea
-      class="form-control border-0 p-0 pe-10 resize-none min-h-25px"
-      data-kt-autosize="true"
-      rows="{1}"
-      placeholder="Reply.."
-    ></textarea>
-
-    <div class="position-absolute top-0 end-0 me-n5">
-      <span class="btn btn-icon btn-sm btn-active-color-primary pe-0 me-2">
-        <app-keenicon name="paper-clip" class="fs-3 mb-3"></app-keenicon>
-      </span>
-
-      <span class="btn btn-icon btn-sm btn-active-color-primary ps-0">
-        <app-keenicon name="geolocation" class="fs-3 mb-3"></app-keenicon>
-      </span>
-    </div>
-  </form>
-  <!--edit::Reply input-->
 </div>
-<!--end::Body-->
